benchmark/k8s/rest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
        - name: rest
          image: gilcamargo/rest-blog:latest
          ports:
            - name: http
              containerPort: 8080
            - name: metrics
              containerPort: 8081
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 64Mi
              cpu: 50m
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - grpc
                      - rest
              topologyKey: "kubernetes.io/hostname"
