benchmark/k8s/rest/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest
  namespace: staging
spec:
  ingressClassName: internal-ingress-nginx
  rules:
    - host: rest.gilcamargo.pvt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rest
                port:
                  number: 8080
  tls:
    - secretName: rest-gilcamargo-pvt
      hosts:
        - rest.gilcamargo.pvt
